# CS149-CodingProject1

./: CMakeLists.txt  CMakePresets.json  README.md
asst1/prog1_mandelbrot_threads/: CMakeLists.txt  check_for_assembly.cpp  check_for_assembly.s  main.cpp  mandelbrotThread.cpp
asst1/prog2_vecintrin/: CMakeLists.txt  main.cpp
asst1/prog3_mandelbrot_ispc/: Answer.md  CMakeLists.txt  Makefile  mandelbrot.ispc
asst1/prog4_sqrt/: CMakeLists.txt
asst1/prog5_saxpy/: CMakeLists.txt
asst1/prog6_kmeans/: CMakeLists.txt  kmeansThread.cpp  main.cpp
